update: update menu

--- a/views/lanches/cardapio.handlebars
+++ b/views/lanches/cardapio.handlebars
@@ -8,8 +8,8 @@
   <thead>
     <tr align="center">
       <th scope="col">Lanche</th>
-      <th scope="col">Preço - Pão Bola</th>
-      <th scope="col">Preço - Pão Árabe</th>
+      <th scope="col">Pão Bola</th>
+      <th scope="col">Pão Árabe</th>
     </tr>
   </thead>
   <tbody>
